--- a/Results.tex
+++ b/Results.tex
@@ -94,19 +94,19 @@ After collection, these water samples were analyzed in the lab at the Rochester 
 \begin{figure}[htb!]
     \begin{minipage}[c]{0.48\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastLONGSJavier-eps-converted-to.pdf}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLaastLONGSJavier_g.png}
      \centerline{(a)}\medskip
     \end{minipage}
     \hfill
     \begin{minipage}[d]{0.48\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_CDOM_LONGS091913-eps-converted-to.pdf}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/astar_CDOM_LONGS091913_g.png}
      \centerline{(b)}\medskip
     \end{minipage}\\
     
     \begin{minipage}[d]{1.0\linewidth}
       \centering
-    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_SM_LONGS091913-eps-converted-to.pdf}
+    \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/astar_SM_LONGS091913_g.png}
       \centerline{(c)}\medskip
     \end{minipage}
   \caption[Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection.]{Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection. These measured IOPs were used to create the LUT in HydroLight. \label{fig:IOPastLONGS} }  
@@ -127,14 +127,14 @@ The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction al
 \begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ELMrad130929_150422}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/ELMrad130929_150422_g.png}
     % \vspace{1.5cm}
     \centerline{(a)}\medskip
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ELMRrs130929_150422}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/ELMRrs130929_150422_g.png}
     % \vspace{1.5cm}
     \centerline{(b)}\medskip
   \end{minipage}
