--- a/Methodology.tex
+++ b/Methodology.tex
@@ -5,15 +5,15 @@
 \label{ch:method}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}[!ht]
+\begin{figure}[H]
   \centering
 % \resizebox{9cm}{!}{%
 % Define block styles
 
-\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=2em, minimum height=2em,text centered, draw=black, fill=red!30]
-\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=1em, minimum height=3em, text width=1.0cm, text centered, draw=black, fill=blue!30]
-\tikzstyle{process} = [rectangle, minimum width=2em, minimum height=2em, text width=2.0cm, text centered, draw=black, fill=orange!30]
-\tikzstyle{decision} = [diamond, minimum width=2em, minimum height=2em, text centered, draw=black, fill=green!30]
+% \tikzstyle{startstop} = [rectangle, rounded corners, minimum width=2em, minimum height=2em,text centered, draw=black, fill=white]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2em, minimum height=3em, text width=1.5cm, text centered, draw=black, fill=white]
+\tikzstyle{process} = [rectangle, minimum width=3em, minimum height=2em, text width=2.2cm, text centered, draw=black, fill=white]
+% \tikzstyle{decision} = [diamond, minimum width=2em, minimum height=2em, text centered, draw=black, fill=white]
 \tikzstyle{arrow} = [thick,->,>=stealth]
 
 \begin{tikzpicture}[node distance=3cm]
@@ -43,7 +43,13 @@
 
 \caption{High-level flowchart of the process. \label{fig:highlevelflowchart}}
 \end{figure}
-\todo{correct space!}
+
+This chapter describes the methodology and approach taken to accomplish the specific objectives mentioned in \S\ref{ch:objectives}. As a review, these specific requirements are (\S\ref{sec:objectives}):
+\begin{enumerate}
+  \item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.
+  \item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.
+  \item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.
+\end{enumerate}
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[H]
@@ -52,15 +58,15 @@
 % \resizebox{9cm}{!}{%
 % Define block styles
 
-\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=2em, minimum height=2em,text centered, draw=black, fill=red!30]
+% \tikzstyle{startstop} = [rectangle, rounded corners, minimum width=2.5em, minimum height=2em,text centered, draw=black, fill=white]
 
-\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2em, minimum height=2em, text width=1.5cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2em, minimum height=2em, text width=2cm, text centered, draw=black, fill=white]
 
-\tikzstyle{iosmall} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=1em, minimum height=1em, text width=1.0cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{iosmall} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=1em, minimum height=1em, text width=1.0cm, text centered, draw=black, fill=white]
 
-\tikzstyle{process} = [rectangle, minimum width=3em, minimum height=2em, text width=2.5cm, text centered, draw=black, fill=orange!30]
+\tikzstyle{process} = [rectangle, minimum width=3em, minimum height=2em, text width=2.5cm, text centered, draw=black, fill=white]
 
-\tikzstyle{decision} = [diamond, minimum width=2em, minimum height=2em, text centered, draw=black, fill=green!30]
+\tikzstyle{decision} = [diamond, minimum width=2em, minimum height=2em, text centered, draw=black, fill=white]
 
 \tikzstyle{arrow} = [thick,->,>=stealth]
 \tikzstyle{arrowdashed} = [thick,dashed,->,>=stealth]
@@ -146,12 +152,6 @@
 \caption{Detailed flowchart of the process. \label{fig:detailflowchart}}
 \end{figure}
 
-This chapter describes the methodology and approach taken to accomplish the specific objectives mentioned in \S\ref{ch:objectives}. As a review, these specific requirements are (\S\ref{sec:objectives}):
-\begin{enumerate}
-  \item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.
-  \item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.
-  \item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.
-\end{enumerate}
 
 The processes described in this work were first introduced by \citet{Concha2013IGARSS} and are based on previous work done by \citet{Raqueno:2000}, \citet{Gerace:2012}, \citet{Pahlevan:2012b} and \citet{Gerace:2013}. A flowchart of the general processes involved is shown in \autoref{fig:highlevelflowchart}. The inputs are the Landsat 8 images and the final products are the maps of CPAs. The complete process can be divided into four different steps: image pre-processing, atmospheric correction, retrieval process, and validation. This chapter will be divided into these four processes. A more detailed flowchart is illustrated in \autoref{fig:detailflowchart} and a more pictorial diagram is shown in \autoref{fig:retrieval}.
 
@@ -379,7 +379,7 @@ where $x$ represents the solar zenith angle and $m$ the reflectance value. \auto
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[height=13cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/Shadow.png}
+    \includegraphics[height=13cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Shadow_g.png}
   \caption{Shadow size as function of zenith angle. The shadow size are impacted by the zenith angle. \label{fig:shadow} } 
 \end{figure}
 
@@ -402,7 +402,7 @@ The Landsat 8 image has associated a particular solar zenith angle. The previous
 
 \begin{figure}[htb]
   	\centering
-  	\includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/ZenithCorrelation.eps}
+  	\includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/ZenithCorrelation_g.png}
   \caption{Correlation for band 1. \label{fig:Band1Corr} } 
 \end{figure}
 
@@ -455,13 +455,13 @@ The absorption properties for the component chlorophyll were input by user-suppl
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastJavier.eps}
+  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLaastJavier_g.png}
     \centerline{(a)}\medskip
   \end{minipage}
   \hfill
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLbastRolo.eps}
+  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLbastRolo_g.png}
     \centerline{(b)}\medskip
   \end{minipage}
   \caption{Chlorophyll IOPs. Chlorophyll mass-specific (a) absorption and (b) scattering spectra used for the determination of the reflectance spectra of the dark pixel in Hydrolight. \label{fig:CHLabast} }   
@@ -484,7 +484,7 @@ was fitted to the normalized data. It was determined that the decay constant $\g
   \hfill 
   \begin{minipage}[c]{0.48\linewidth}
   	\centering
-  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/ONTNS_CDOMfitting.eps}
+  	\includegraphics[width=7cm]{./Images/ONTNS_CDOMfitting_g.eps}
     \centerline{(b)}\medskip
   \end{minipage}    
   \caption{CDOM IOPs. CDOM (a) absorption coefficient spectra and (b) mass-specific absorption spectra used for the determination of the reflectance spectra of the dark pixel in Hydrolight. \label{fig:CDOM_IOP} } 
@@ -496,13 +496,13 @@ The SM mass-specific absorption coefficient was determined by dividing the absor
 \begin{figure}[!ht]
   \begin{minipage}[c]{0.48\linewidth}
   	\centering
-  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/SMaastJavier.eps}
+  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/SMaastJavier_g.png}
     \centerline{(a)}\medskip
   \end{minipage}     
   \hfill
   \begin{minipage}[c]{0.48\linewidth}
   	\centering
-  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/SMbastRolo.eps}
+  	\includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/SMbastRolo_g.png}
     \centerline{(b)}\medskip
   \end{minipage} 
   \caption{Mineral mass-specific (a) absorption and (b) scattering spectra used for the determination of the reflectance spectra of the dark pixel in Hydrolight. \label{fig:SMabast} }     
@@ -746,7 +746,7 @@ This method first uses forwarding modeling to create a three dimensional (3-D) L
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[width=14cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/4DLUT.png}
+  \includegraphics[width=14cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/4DLUT_g.png}
   \caption{Four dimensional LUT. The dimension are concentrations of chlorophyll-{\it a}, suspended particles, CDOM and visibility and the range is spectral sensor-reaching radiance. Source: \citet{GeraceThesis}}
   \label{fig:4DLUT} 
 \end{figure}
