--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -374,7 +374,7 @@ Therefore, this study shows that the Landsat 8 satellite can be utilized over Ca
 \phantomsection
 \addcontentsline{toc}{chapter}{Acknowledgments}
 \setlength{\parindent}{20pt}
-I would like to extend a special thanks to the United States Geological Survey (USGS) for its sponsorship (contract number G12PC00065) and for the free-access Landsat archive that has made this effort possible. Thanks to the Fulbright Commission for opening me the doors and sponsoring my M.S. degree. Special thanks to the Monroe County Environmental Laboratory of the Monroe County Department of Environmental Services for the $C_a$ and $TSS$ measurements used to validate our in house concentration measurements, especially Scott, Providencia and Gary. Nina Raque\~{n}o is thanked for her invaluable help in the logistic of the field data collections, and faculty, staff and students at the Rochester Institute of Technology for helping in the data collection, especially Paul Romanczyk and Rolando Raque\~{n}o. Also, thanks to Dr. Christy Tyler for facilitating the Aquatic Ecology Lab at RIT for the $C_a$ measurements. Also, thanks to the people who help me in one way or other in the data collections. Also, thanks to Ocean Color community, specially Dr. Emmanuel Boss and attendants of the 2013 Ocean color and instrumentation summer course at the Darling Marine Center for including me in their family. To my advisor Dr. John Schott for believing on me, guiding me and allowing me independence. Thanks to the administrative staff at the center, specially Cindy Schultz, Sue Chan and Amanda Zeluff for always helping me with a smile.
+I would like to extend a special thanks to the United States Geological Survey (USGS) for its sponsorship (contract number G12PC00065) and for the free-access Landsat archive that has made this effort possible. Thanks to the Fulbright Commission for opening me the doors and sponsoring my M.S. degree. Special thanks to the Monroe County Environmental Laboratory of the Monroe County Department of Environmental Services for the $C_a$ and $TSS$ measurements used to validate our in house concentration measurements, especially Scott, Providencia and Gary. Nina Raque\~{n}o is thanked for her invaluable help in the logistic of the field data collections, and faculty, staff and students at the Rochester Institute of Technology for helping in the data collection, especially Paul Romanczyk, Rolando Raque\~{n}o and Captain Mark. Also, thanks to Dr. Christy Tyler for facilitating the Aquatic Ecology Lab at RIT for the $C_a$ measurements. Also, thanks to the people who help me in one way or other in the data collections. Also, thanks to Ocean Color community, specially Dr. Emmanuel Boss and attendants of the 2013 Ocean color and instrumentation summer course at the Darling Marine Center for including me in their family. To my advisor Dr. John Schott for believing on me, guiding me and allowing me independence. Thanks to the administrative staff at the center, specially Cindy Schultz, Sue Chan and Amanda Zeluff for always helping me with a smile.
 
 It is not easy to be far away from my beloved ones. I cannot describe the pride I feel of having what a supporting family that overcomes the sadness of not being together with happiness of me achieving my goals. Thanks to my parents Osvaldo Concha Silva and Nelly del Carmen Sep\'ulveda Reyes for sacrificing their life for ours and always giving the best for our education. I would not be here if were not for them. Thanks to my siblings Loretto Constanza Concha Sep\'ulveda and Alvaro Nicolas Concha Sep\'ulveda for always supporting me.
 
